# gandi-dns-updater

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  update.py
.github/workflows/: docker-publish.yml
