[tool.poetry]
name = "gandi-dns-updater"
version = "0.2.0"
description = "Gandi DNS Updater automatically updates a domain’s DNS A record via Gandi’s LiveDNS API when the public IP changes."
authors = ["Romain Gaillegue <romain@biscotte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
